8372957: After JDK-8282441 JDWP might allow some invalid FrameIDs to be used

Reviewed-by: amenkov, sspitsyn